--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
     --foreground: #ededed;
   }
 }
-
+@media (min-width: 1280px) { .bx-menu { display: none; } }
 body {
   color: var(--foreground);
   background: var(--background);
