--- a/app/components/NavBar.css
+++ b/app/components/NavBar.css
@@ -7,5 +7,5 @@
 }
 
 .mobile-navbar-link {
-    @apply p-4 text-white hover:text-indigo-200 transition-all cursor-pointer;
+    @apply p-4 transition-all cursor-pointer;
 }
