Navigation bar with mostly working mobie capabilit
If the user has the menu open. then goes full screen, the menu will still be open

--- a/app/components/NavBar.css
+++ b/app/components/NavBar.css
@@ -3,9 +3,13 @@
 }
 
 .navbar-link-text {
-    @apply text-white hover:text-indigo-200;
+    @apply text-black hover:text-indigo-200 text-lg;
+}
+
+.mobile-navbar-link-text {
+    @apply text-white hover:text-indigo-200 text-lg;
 }
 
 .mobile-navbar-link {
-    @apply p-4 transition-all cursor-pointer;
+    @apply py-12 px-10 transition-all cursor-pointer;
 }
