--- a/components/navbar/NavBar.css
+++ b/components/navbar/NavBar.css
@@ -1,15 +1,24 @@
+.main-container {
+    @apply fixed w-full h-16 bg-transparent justify-center items-center;
+}
+
+.navbar-container {
+    @apply flex w-full h-full justify-center items-center;
+}
+
+.nav-container {
+    @apply h-full absolute right-0 items-end text-white
+    bg-transparent drop-shadow-md justify-end sm:justify-evenly sm:w-3/4 sm:relative sm:flex;
+}
+
 .navbar-link {
-    @apply p-3 hover:text-indigo-200 rounded-md transition-all cursor-pointer;
+    @apply hidden text-black hover:text-indigo-200 text-lg w-32 flex-col sm:flex items-center;
 }
 
-.navbar-link-text {
-    @apply text-black hover:text-indigo-200 text-lg mx-8;
+.mobile-menu {
+    @apply w-full h-20 flex flex-row items-center justify-center;
 }
 
-.mobile-navbar-link-text {
-    @apply text-white hover:text-indigo-200 text-lg;
-}
-
-.mobile-navbar-link {
-    @apply py-12 px-10 transition-all cursor-pointer;
+.mobile-menu-link-text {
+    @apply text-white hover:text-indigo-200 w-full h-full flex items-center justify-center p-4 text-xl font-semibold;
 }
