Basic Layout of the Connect Page + Refactored Icons and Images

--- a/components/navbar/NavBar.css
+++ b/components/navbar/NavBar.css
@@ -12,7 +12,7 @@
 }
 
 .navbar-link {
-    @apply hidden text-black hover:text-indigo-200 sm:flex text-2xl font-mono w-32 flex-col items-center cursor-pointer
+    @apply hidden text-black hover:text-indigo-200 sm:flex text-2xl w-32 flex-col items-center cursor-pointer
     transform transition-transform duration-300 hover:scale-110;
 }
 
