--- a/app/globals.css
+++ b/app/globals.css
@@ -19,5 +19,5 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
