Optimized `useClickOutside` + modal closes on clickOutside

--- a/components/navbar/NavBar.css
+++ b/components/navbar/NavBar.css
@@ -1,5 +1,5 @@
 .main-container {
-    @apply fixed w-full h-16 bg-transparent justify-center items-center;
+    @apply fixed w-full h-16 bg-transparent justify-center items-center z-30;
 }
 
 .navbar-container {
